# hackheist

./: .gitignore  agents.py  package-lock.json  package.json  report.md  requirements.txt  threads_db.db
app/: page.tsx
app/components/: combinedForm.tsx  doctorForm.tsx  patientForm.tsx
backend/: app.py  requirements.txt
mediconnect/: .gitignore  README.md  pyproject.toml  report.md
mediconnect/src/mediconnect/: crew.py  main.py
mediconnect/src/mediconnect/config/: agents.yaml  tasks.yaml
whatsapp/: quickstart.py  run.py
whatsapp/app/: __init__.py  config.py  views.py
whatsapp/app/services/: openai_service.py
whatsapp/app/utils/: whatsapp_utils.py
