[project]
name = "mediconnect"
version = "0.1.0"
description = "mediconnect using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
mediconnect = "mediconnect.main:run"
run_crew = "mediconnect.main:run"
train = "mediconnect.main:train"
replay = "mediconnect.main:replay"
test = "mediconnect.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
